--- a/integrandoHTMLCSSeJS/selecionandoElementos4.html
+++ b/integrandoHTMLCSSeJS/selecionandoElementos4.html
@@ -22,7 +22,39 @@
         <p>Fim</p>
     </div>
     <script>
-        // ...
+        
+        // Função onde esta simplificando o console.log() para apenas .log()
+        function log() {
+            console.log(this)
+        }
+        HTMLCollection.prototype.log = log
+        HTMLElement.prototype.log = log
+        NodeList.prototype.log = log
+        Node.prototype.log = log
+
+
+        // usando querySelector para imprimir no console os parametros
+        const lista = document.querySelector('div ul')
+        lista.parentNode.log()
+        lista.childNodes.log()
+
+        const primeiro = lista.firstChild
+        primeiro.log()
+        primeiro.nextSibling.log()
+
+        const ultimo = lista.lastChild 
+        ultimo.log()
+        ultimo.previousSibling.log()
+
+        lista.children.log()
+        lista.firstElementChild.log()
+        lista.lastElementChild.log()
+        lista.parentNode.previousSibling.log()
+        lista.parentNode.nextSibling.log()
+
+        document.querySelectorAll('div ul li').log()
+
+
     </script>
 </body>
 
