--- a/integrandoHTMLCSSeJS/acessandoAtributos1.html
+++ b/integrandoHTMLCSSeJS/acessandoAtributos1.html
@@ -15,7 +15,26 @@
         <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
     </div>
     <script>
-        //...
+        // Acessando os atributos usando querySelector e pegando os " src " 
+        const img = document.querySelector('img')
+        console.log('getAttribute', img.getAttribute('src'))
+        console.log('src', img.src)
+
+        // imprimindo os atributos no console
+        const src = img.getAttributeNode('src')
+        console.log('Attribute "src" ..........')
+        console.log('NodeType', src.nodeType)
+
+        // imprimindo os elementos no console
+        const link = document.querySelector('a')
+        console.log('Elemento "a" ......')
+        console.log('href', link.href)
+        console.log('firstChild.nodeType', link.firstChild.nodeType)
+
+        // mudando o value do "a" de Cod3r para "Novo Texto"
+        link.firstChild.nodeValue = 'Novo Texto'
+
+
     </script>
 </body>
 
