--- a/integrandoHTMLCSSeJS/modificandoHTML1.html
+++ b/integrandoHTMLCSSeJS/modificandoHTML1.html
@@ -16,7 +16,7 @@
         div1.classList.add('destaque')             //add uma class para essa div
         div1.innerHTML =   'Primeiro'              //colocando "primeiro" como conteudo dessa div
 
-        const div2 = documen.createElement('div')  // Criando a segunda div
+        const div2 = document.createElement('div')  // Criando a segunda div
         div2.setAttribute('wm-atributo', 'valor')  //set um atributo
         div2.innerHTML = 'Segundo'                 //colocando "segundo" como conteudo dessa div
 
