--- a/integrandoHTMLCSSeJS/modificandoHTML2.html
+++ b/integrandoHTMLCSSeJS/modificandoHTML2.html
@@ -12,7 +12,18 @@
         <p>Texto Inicial</p>
     </div>
     <script>
-        // ...
+        
+        const div = document.querySelector('div')
+        div.innerHTML = 'Texto Alterado'
+        // div.outerHTML = 'Texto Alterado'
+        div.insertAdjacentHTML('beforebegin', '<p>Antes Inicio</p>')
+        div.insertAdjacentHTML('afterbegin', '<p>Antes Inicio</p>')
+        div.insertAdjacentHTML('beforeend', '<p>Antes Inicio</p>')
+        div.insertAdjacentHTML('afterend', '<p>Antes Inicio</p>')
+
+        //somente text ( sem tag )
+        console.log(div.innerText)
+
     </script>
 </body>
 
