CRIANDO UM FLAPPY BIRD(JOGO) EM JS: até agora só feito os par de barreiras e o sorteo de abertura entre elas.

--- a/integrandoHTMLCSSeJS/flappy.html
+++ b/integrandoHTMLCSSeJS/flappy.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="conteudo">
+                                <!--Desenvolvendo um app(jogo) de Flappy Bird-->
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
     <script src="js/flappy.js"></script>
