JOGO FLAPPY BIRD FINALIZADO

--- a/integrandoHTMLCSSeJS/flappy.html
+++ b/integrandoHTMLCSSeJS/flappy.html
@@ -12,7 +12,7 @@
                                 <!--Desenvolvendo um app(jogo) de Flappy Bird-->
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
-    <script src="js/flappy.js"></script>
+    <script src="js/flappy.js"></script> <!--JavaScript finalizado -->
 </body>
 
 </html>
