--- a/jquery/selecionandoElementos1.html
+++ b/jquery/selecionandoElementos1.html
@@ -49,6 +49,25 @@
     </form>
 
     <script>
-        // ...
+        $('#feira').addClass('destaque').removeClass('destaque')
+        $('li').addClass('destaque')
+        $('[wm-obrigatorio]').removeClass( 'destaque')
+        $('li.opcional').removeClass('destaque')
+        $('div p span').addClass('destaque')
+
+        //Exclusivo do jQuery
+        $('li:first').css('border','solid 3px yellow') //mudando apenas o css do primeiro
+        $('li:odd').css('border','solid 10px orange') //mudando css apenas dos impares
+        $('li:gt(1)').css('border','solid 10px white') //mudando css apenas dos indces maior indicado no gt()
+        $('li:mot(:last)').css('border', 'none') //removendo css dos três primeiros da lista
+        $('li:contains("r")').css('background-color','black')
+
+        $('form *').hide()
+        $('form :text').show()
+        $('form :password').show()
+        $('form :checkbox').show()
+        $('form :radio').show()
+        $('form :file').show()
+
     </script>
 </body>
