--- a/jquery/eventos3.html
+++ b/jquery/eventos3.html
@@ -26,6 +26,22 @@
     <span id='resultado'></span>
 
     <script>
-        // ...
+        function exibirDadosEventos(e) {
+            $('#resultado').empty()
+            const div1 = $('<div>')
+            const div2 = $('<div>')
+
+            $('#resultado').append(div1, div2)
+            div1.append(`target: ${e.target.id}`)
+
+            const rt = e.relatedTarget ? e.relatedTarget.tarnName : null
+            div1.append(`<br>relatedTarget: ${rt}`)
+
+            div1.append(`<br>type: ${e.type}`)
+            div1.append(`<br>which: ${e.which}`)
+        }
+
+        $('#div1, #div2').on('mouseenter mouseleave', exibirDadosEventos)
+        $('input').keyup(exibirDadosEventos)
     </script>
 </body>
