--- a/bootstrap/exercicios/paginas/componentes.html
+++ b/bootstrap/exercicios/paginas/componentes.html
@@ -20,6 +20,29 @@
 <hr>
 
 <!-- Botões -->
+<div>
+    <div class="mb-3">
+        <button class="btn btn-primary">Salvar</button>
+        <button class="btn btn-secondary">Cancelar</button>
+        <button class="btn btn-outline-success">Finalizar</button>
+        <button class="btn btn-danger" disabled>Salvar</button>
+        <button class="btn btn-warning" data-toggle="button">Selecionar</button>
+    </div>
+
+    <div class="btn-group mb-3">
+        <button class="btn btn-info">Left</button>
+        <button class="btn btn-info active">Center</button>
+        <button class="btn btn-info">Right</button>
+    </div>
+
+    <div class="dropdown">
+        <button class="btn btn-danger btn-lg dropdown-toggle" data-toggle="dropdown">Comprar!</button>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Paypal</a>
+            <a href="#" class="dropdown-item">Pagseguro</a>
+        </div>
+    </div>
+</div>
 
 <h1 class="mt-5">2. Progresso -
     <small>
@@ -29,6 +52,16 @@
 <hr>
 
 <!-- Progresso -->
+<div class="progress mb-4">
+    <div class="progress-bar progress-bar-striped bg-success" style="width: 80%;">80%</div>
+</div>
+
+<div class="progress" style="height: 40px">
+        <div class="progress-bar" style="width:15%">15%</div>
+        <div class="progress-bar bg-success" style="width:30%">30%</div>
+        <div class="progress-bar bg-danger" style="width:20%">20%</div>
+        <div class="progress-bar bg-info" style="width:25%">25%</div>
+</div>
 
 <h1 class="mt-5">3. Mensagens (Alertas) -
     <small>
@@ -38,6 +71,22 @@
 <hr>
 
 <!-- Alertas -->
+<div>
+    <div class="alert alert-success">
+        Operação realizada com sucesso!
+    </div>
+    <div class="alert alert-warning">
+        <strong>Cuidado!</strong> Operação gerou um impacto no estoque.
+    </div>
+    <div class="alert alert-danger">
+        <strong>Erro!</strong> Ocorreu um erro inesperado!  
+        <a href="#" class="alert-link">Mais detalhes</a>
+    </div>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+</div>
 
 <h1 class="mt-5">4. Paginação -
     <small>
@@ -47,6 +96,33 @@
 <hr>
 
 <!-- Peginação -->
+<div>
+    <nav>
+        <ul class="pagination">
+            <li class="page-item">
+                <a href="#" class="page-link">Anterior</a>
+            </li>
+            <li class="page-item active">
+                <a href="#" class="page-link">1</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">2</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">3</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">4</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">5</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">Próximo</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
 <h1 class="mt-5">5. Tooltip -
     <small>
@@ -56,6 +132,16 @@
 <hr>
 
 <!-- Tooltip -->
+<div>
+    <div class="alert alert-warning">
+        Precisa chamar uma função JS! 
+        <strong>E agora?</strong>
+    </div>
+
+    <button class="btn btn-danger" data-toggle="tooltip" data-placement="right" title="Pense antes!">
+        Excluir
+    </button>
+</div>
 
 <h1 class="mt-5">6. Slider -
     <small>
@@ -65,6 +151,29 @@
 <hr>
 
 <!-- Slider -->
+<div>
+    <div class="carousel slide" id="slider" data-ride="carousel">
+        <div class="carousel-inner bg-dark">
+            <div class="carousel-item active">
+                <img src="/bootstrap/exercicios/imgs/slide1.png" alt="slide1" class="d-block mx-auto">
+            </div>
+            <div class="carousel-item">
+                <img src="/bootstrap/exercicios/imgs/slide2.png" alt="slide2" class="d-block mx-auto">
+            </div>
+            <div class="carousel-item">
+                <img src="/bootstrap/exercicios/imgs/slide3.png" alt="slide3" class="d-block mx-auto">
+            </div>
+        </div>
+
+        <a href="#slider" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#slider" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+</div>
 
 <h1 class="mt-5">7. Accordion -
     <small>
@@ -74,7 +183,25 @@
 <hr>
 
 <!-- Accordion -->
+<div>
+    <div class="mb-5" id="accordion">
+        <div class="card">
+            <div class="car-heard" id="pegunta1">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#resposta1">
+                        Quem é o professor de programação mais legal?
+                    </button>
+                </h5>
+            </div>
+            <div class="collapse" id="resposta1" data-parent="#accordion">
+                <div class="card-body">
+                    Posso dizer? (:
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
-    // ...
+    $('[data-toggle="tooltip"]').tooltip()
 </script>
