--- a/vue/exercicios/basico.html
+++ b/vue/exercicios/basico.html
@@ -8,8 +8,21 @@
 </head>
 <body class="exercicio">
 
+    <div id="app">
+        <p>1) {{ 2 + 2 }} </p>
+        <p>2) {{ "teste".toUpperCase() }} </p>
+        <p>3) Produto: {{ nome }}, R$ {{preco}}, {{desconto * 100}} </p>
+    </div>
+
     <script>
-        // ...
+        new Vue ({
+            el: "#app",
+            data: {
+                nome: 'Caneta',
+                preco: 6.89,
+                desconto: 0.15
+            }
+        })
     </script>
 </body>
 </html>
