--- a/vue/exercicios/binding.html
+++ b/vue/exercicios/binding.html
@@ -8,8 +8,25 @@
 </head>
 <body class="exercicio">
 
+    <div id="app">
+        <p> {{ link }} </p>
+        <p><a href="{{ link }}">Canal?</a></p>
+        <p><a v-bind:href="link">Canal</a></p>
+        <p><a :href="link">aaa</a></p>
+        <p>
+            <input type="text" v-model="nome"><br>
+            <span>{{ nome }}</span>
+        </p>
+    </div>
+
     <script>
-        // ...
+        new Vue ({
+            el: '#app',
+            data: {
+                nome: 'Maria',
+                link: 'https://youtube.com/cod3rcursos'
+            }
+        })
     </script>
 </body>
 </html>
