--- a/vue/exercicios/estilo.html
+++ b/vue/exercicios/estilo.html
@@ -13,8 +13,18 @@
 </head>
 <body class="exercicio">
 
+    <div id="app" @click="aplicarCor = !aplicarCor"
+            :class="{vermelho: aplicarCor}">
+        Test
+    </div>
+
     <script>
-        // ...
+        new Vue ({
+            el: '#app',
+            data: {
+                aplicarCor: false
+            }
+        })
     </script>
 </body>
 </html>
